--- a/src/config.properties
+++ b/src/config.properties
@@ -4,14 +4,12 @@ database.username = root
 database.password = 1234
 database.serverTimezone = UTC
 
-pages.items = /jsp/items.jsp
-pages.login = /jsp/login.jsp
-pages.registration = /jsp/registration.jsp
-pages.additem = /jsp/additem.jsp
-pages.orders = /jsp/orders.jsp
-
-
-pages.index = /jsp/index.jsp
-pages.main = /jsp/main.jsp
-pages.error = /jsp/error.jsp
+pages.items = /WEB-INF/jsp/items.jsp
+pages.login = /WEB-INF/jsp/login.jsp
+pages.registration = /WEB-INF/jsp/registration.jsp
+pages.additem = /WEB-INF/jsp/additem.jsp
+pages.orders = /WEB-INF/jsp/orders.jsp
+pages.order = /WEB-INF/jsp/order.jsp
+pages.myorders = /WEB-INF/jsp/myorders.jsp
+pages.error = /WEB-INF/jsp/error.jsp
 
