add delete items

--- a/src/config.properties
+++ b/src/config.properties
@@ -7,9 +7,12 @@ database.serverTimezone = UTC
 pages.items = /WEB-INF/jsp/items.jsp
 pages.login = /WEB-INF/jsp/login.jsp
 pages.registration = /WEB-INF/jsp/registration.jsp
-pages.additem = /WEB-INF/jsp/additem.jsp
+pages.itemadd = /WEB-INF/jsp/itemadd.jsp
+pages.itemsdelete = /WEB-INF/jsp/itemsdelete.jsp
 pages.orders = /WEB-INF/jsp/orders.jsp
 pages.order = /WEB-INF/jsp/order.jsp
 pages.myorders = /WEB-INF/jsp/myorders.jsp
 pages.error = /WEB-INF/jsp/error.jsp
+pages.profile = /WEB-INF/jsp/profile.jsp
+pages.changepassword = /WEB-INF/jsp/changepassword.jsp
 
