--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -23,5 +23,14 @@
         <url-pattern>/index.html</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>LogFilter</filter-name>
+        <filter-class>com.erofeev.st.alexei.myonlineshop.servlet.filter.LogFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LogFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 
 </web-app>
