--- a/src/config.properties
+++ b/src/config.properties
@@ -14,5 +14,7 @@ pages.order = /WEB-INF/jsp/order.jsp
 pages.myorders = /WEB-INF/jsp/myorders.jsp
 pages.error = /WEB-INF/jsp/error.jsp
 pages.profile = /WEB-INF/jsp/profile.jsp
+pages.profile_menu = /WEB-INF/jsp/profilemenu.jsp
 pages.changepassword = /WEB-INF/jsp/changepassword.jsp
+
 
