add import items on new page

--- a/src/config.properties
+++ b/src/config.properties
@@ -16,5 +16,6 @@ pages.error = /WEB-INF/jsp/error.jsp
 pages.profile = /WEB-INF/jsp/profile.jsp
 pages.profile_menu = /WEB-INF/jsp/profilemenu.jsp
 pages.changepassword = /WEB-INF/jsp/changepassword.jsp
+pages.import_menu = /WEB-INF/jsp/import_menu.jsp
 
 
